# tms_diplom

./: README.md  pyproject.toml  query_test.py  Дипломный проект.pptx
diplom/: settings.py  urls.py
logistic/: admin.py  forms.py  models.py  views.py
logistic/migrations/: 0001_initial.py  0002_alter_auction_table.py  0003_alter_balanceoperation_table_alter_cityauction_table_and_more.py  0004_alter_services_ser_name.py  0005_alter_services_table.py  0006_remove_order_service_order_service.py  0007_alter_order_correspondence_alter_order_price.py
templates/: base.html  client.html  create_correspondance.html  create_order.html  home.html  orders.html  show_correspondance.html  show_order.html  upload_balance.html
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_balance.py
